# what-version

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
what-version/: CHANGELOG.md  Cargo.toml
what-version-core/: CHANGELOG.md  Cargo.toml
what-version-core/src/: lib.rs
what-version/src/: main.rs
