[package]
name = "what-version"
version = "0.2.0"
edition = "2021"

[lib]
name = "what_version"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
clap-stdin = "0.6.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
yare = "3.0.0"
