[package]
name = "what-version-core"
version = "1.0.0"
description = "Determines the highest semver version from a list of versions that satisfies all given version requirements."
edition = "2024"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
semver = "1.0.26"

[dev-dependencies]
yare = "3.0.0"
