[package]
name = "what-version"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
clap-stdin = "0.6.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
what-version-core = { path = "../what-version-core", version = "*" }
