[package]
name = "what-version"
version = "0.2.0"
description = "CLI to determine the highest semver version from a list of versions that satisfies all given version requirements."
edition = "2021"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
clap-stdin = "0.6.0"
env_logger = "0.11.7"
log = "0.4.27"
semver = "1.0.26"
serde_json = "1.0.140"
what-version-core = "0.2.1"
